<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
   <Button
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:text="@string/alterar_cadastro"
       android:onClick="alterarCadastro"
   />
   <Button
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:text="@string/listar_seminarios"
       android:onClick="listarSeminarios"
   />
   <Button
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:text="@string/seminarios_assisti"
       android:onClick="seminariosQueAssisti"
       />
   <Button
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:text="@string/comprovar_presenca_bluetooth"
       android:onClick="comprovarPresencaBlueTooth"
   />
   <Button
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:text="@string/comprovar_presenca_qr_code"
       android:onClick="comprovarPresencaQRCode"
   />

</LinearLayout>
