<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >

   <TextView
       android:id="@+id/nome_sem"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
   />
   <Button
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:text="@string/receber_confirm_op"
       android:onClick="profBlueTooth"
       />
   <Button
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:text="@string/gerar_qr_code"
       android:onClick="gerarQrCode"
   />

   <Button
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:text="@string/alterar"
       android:onClick="alterar"
   />
   <Button
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:text="@string/excluir"
       android:onClick="excluir"
   />
   <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/alunos_seminario"
   />
   <ListView
       android:id="@+id/lista_alunos"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
    />
</LinearLayout>
